--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
+    "build": "npm install & npm install --prefix client && npm run build --prefix client"
   },
   "author": "",
   "license": "ISC",
